[package]
name = "z157"
version = "1.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Glenn Bitar"]
description = "Parser for fields filtering according to Zalando's RESTful API guideline #157"
repository = "https://github.com/glennib/z157"

[lib]
bench = false

[dependencies]
ego-tree = "0.10.0"
winnow = "0.7.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[[bench]]
name = "parse"
harness = false
